--- a/index.html
+++ b/index.html
@@ -193,16 +193,16 @@
     <script>
         const slidesPhone = document.querySelectorAll(".slide");
 
-        for (const slide of slidesPhone) {
-            slide.addEventListener("click", () => {
+        for (const slidePhone of slidesPhone) {
+            slidePhone.addEventListener("click", () => {
                 clearActiveClasses();
-                slide.classList.add("active");
+                slidePhone.classList.add("active");
             });
         }
 
         function clearActiveClasses() {
-            slidesPhone.forEach((slide) => {
-                slide.classList.remove("active");
+            slidesPhone.forEach((slidePhone) => {
+                slidePhone.classList.remove("active");
             });
         }
 
@@ -376,39 +376,42 @@
     <!-- Lastest masterpiece  -->
 
     <!-- Expanding services  -->
-    <!-- <section class="expanding-services">
+    <!-- <section class="expanding-services hide-md hide-sm hide-xs">
         <h3 style="color: #0F172A;text-align: center;">Expanding Services</h3>
         <div class="d-flex justify-content-center" style="margin-top: 80px;">
-            <div class="sponsor-img-expanding">
-                <img src="./assets/images/expanding-content-box.png" alt="">
-            </div>
-            <div class="sponsor-img-expanding">
-                <img src="./assets/images/expanding-content-box-2.png" alt="">
-            </div>
-            <div class="sponsor-img-expanding">
-                <img src="./assets/images/expanding-content-box-3.png" alt="">
-            </div>
-            <div class="sponsor-img-expanding">
-                <img src="./assets/images/expanding-content-box-4.png" alt="">
-            </div>
-            <div class="sponsor-img-expanding">
-                <img src="./assets/images/expanding-content-box-5.png" alt="">
-            </div>
-            <div class="sponsor-img-expanding">
-                <img src="./assets/images/expanding-content-box-6.png" alt="">
+            <div class="row">
+                <div class="sponsor-img-expanding">
+                    <img src="./assets/images/expanding-content-box.png" alt="">
+                </div>
+                <div class="sponsor-img-expanding">
+                    <img src="./assets/images/expanding-content-box-2.png" alt="">
+                </div>
+                <div class="sponsor-img-expanding">
+                    <img src="./assets/images/expanding-content-box-3.png" alt="">
+                </div>
+                <div class="sponsor-img-expanding">
+                    <img src="./assets/images/expanding-content-box-4.png" alt="">
+                </div>
+                <div class="sponsor-img-expanding">
+                    <img src="./assets/images/expanding-content-box-5.png" alt="">
+                </div>
+                <div class="sponsor-img-expanding">
+                    <img src="./assets/images/expanding-content-box-6.png" alt="">
+                </div>
             </div>
         </div>
         <div class="d-flex justify-content-center align-items-center" style="margin-top:80px;">
             <button class="find-service-btn"><span class="search-text">Find Services</span></button>
         </div>
     </section> -->
+
     <!-- Expanding services  -->
 
     <!-- Best solution  -->
-    <!-- <section class="best-solution">
+    <section class="best-solution">
         <div class="container">
             <div class="row">
-                <div class="col-7">
+                <div class="col-lg-7">
                     <h2 style="color: #ffff;">Best solutions for your demanding collection</h2>
                     <div style="font-size: 18px; font-weight: 400; line-height: 28.8px;color: #ffff;margin-top: 24px;">
                         Odio vulputate
@@ -426,12 +429,12 @@
                     </div>
                     <button class="explore-xinder-button">Explore Xinder</button>
                 </div>
-                <div class="col-5">
+                <div class="col-lg-5">
                     <img src="./assets/images/col-content.png" style="height: 320px;margin-top: 30px;" alt="">
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- Best solution  -->
 
     <!-- Art gal  -->
